[package]
name = "deadlocks_debugger"
version = "0.1.0"
authors = ["Pierre Avital <pierre.avital@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector-map = {version="", optional=true}

[features]
use_vecmap = ["vector-map"]
default = ["use_vecmap"]