[package]
name = "no_deadlocks"
version = "1.3.2"
keywords = ["deadlock", "Mutex", "RwLock", "locks"]
authors = ["Pierre Avital <pierre.avital@me.com>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
description = "A Runtime Deadlock Debugger"
repository = "https://github.com/p-avital/no-deadlocks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector-map = { version = "1.0", optional = true }
backtrace = "0.3"

[features]
use_vecmap = ["vector-map"]
default = ["use_vecmap"]
